Fix some weird spacing issues in IE7, and a cross-browser bug in Header

--- a/app/stylesheets/report_card.less
+++ b/app/stylesheets/report_card.less
@@ -348,7 +348,7 @@
     cursor:default;
     height:25px;
     line-height:25px;
-    padding-left:8px;
+    padding:0 0 0 8px;
     
     a {
       float:right;
@@ -597,6 +597,10 @@
   
   > ol {
     margin-top:-1px;
+  }
+  
+  li {
+    padding:0;
   }
   
   div.group {
